--- a/style.css
+++ b/style.css
@@ -26,9 +26,28 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-width: 500px;
     
   }
+  
+input[type="text"],
+input[type="email"],
+input, 
+textarea {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+    padding: .25rem .75rem;
+    resize: none;
+}
 
+input[type="submit"] {
+    background-color: #0077b6;
+    color: #ffffff;
+    padding: .25rem .75rem;
+    border: none;
+    font-weight: 300;
+}
   address {
     font-style: normal;
     text-align: center;
@@ -78,6 +97,7 @@
     backdrop-filter: blur(6px); /* deixa o fundo desfocado atrás do balão */
     border: 1px solid rgba(255, 255, 255, 0.2);
     color: white; /* deixa a escrita branca */
+    min-height: 90vh;
   }
   p{
     margin-bottom: 1rem;
@@ -97,7 +117,7 @@
   }
 
   h1{
-    color: aqua;
+    color: rgb(255, 255, 0);
     text-align: center;
     
   }
@@ -109,7 +129,7 @@
   }
 
   h2{
-    color: aqua;
+    color: rgb(255, 255, 0);
     text-align: center;
   }
   canvas {
@@ -130,5 +150,55 @@
     color: white;
   }
 
+  .card{
+    border-radius: 8px;
+    padding: 2rem;
+    box-shadow: 0 2px 6px(0, 0, 255, 0.3);
+    list-style: none;
+  }
+
+  .titulo-card{
+    font-weight: bold;
+    color: rgb(255, 255, 0);
+    font-size: 1.3rem;
+  }
+
+  .titulo-secao{
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .cards-em-coluna {
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: center;
+    gap: 1rem;
+  }
+  
+  .card {
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgb(255, 255, 0);
+    list-style: none;
+    width: 200px;
+    text-align: center;
+    
+  }
+
+  .cards-em-linha {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+html{
+  color-scheme: dark;
+}
+  
+  
+
+  
  
+
   
